tests/baselines/reference/protectedClassPropertyAccessibleWithinSubclass(target=es2015).errors.txt
protectedClassPropertyAccessibleWithinSubclass.ts(4,15): error TS2564: Property 'x' has no initializer and is not definitely assigned in the constructor.


==== protectedClassPropertyAccessibleWithinSubclass.ts (1 errors) ====
    // no errors
    
    class B {
        protected x: string;
                  ~
!!! error TS2564: Property 'x' has no initializer and is not definitely assigned in the constructor.
        protected static x: string;
    }
    
    class C extends B {
        protected get y() { return this.x; }
        protected set y(x) { this.y = this.x; }
        protected foo() { return this.x; }
        protected bar() { return this.foo(); }
    
        protected static get y() { return this.x; }
        protected static set y(x) { this.y = this.x; }
        protected static foo() { return this.x; }
        protected static bar() { this.foo(); }
    }
    